erDiagram
    USER ||--o{ STUDYMATERIAL : "uploads"
    USER ||--o{ FLASHCARD : "owns"
    USER ||--o{ STUDYPLAN : "creates"
    USER ||--o{ PROGRESS : "tracks"
    USER ||--o{ NOTIFICATION : "receives"
    STUDYMATERIAL ||--o{ FLASHCARD : "generates"

    USER {
        ObjectId _id PK
        string name
        string email UK
        string passwordHash
        string role
        date createdAt
        date updatedAt
    }
    STUDYMATERIAL {
        ObjectId _id PK
        ObjectId user FK
        string title
        string subject
        string topic
        string text
        string sourceFile
        date createdAt
    }
    FLASHCARD {
        ObjectId _id PK
        ObjectId user FK
        ObjectId material FK
        string subject
        string topic
        string question
        string answer
        string difficulty
        date createdAt
    }
    STUDYPLAN {
        ObjectId _id PK
        ObjectId user FK
        string title
        string subject
        date examDate
        int dailyTargetMinutes
    }
    PROGRESS {
        ObjectId _id PK
        ObjectId user FK
        string subject
        int cardsReviewed
        int hardCardCount
        date lastReviewedAt
    }
    NOTIFICATION {
        ObjectId _id PK
        ObjectId user FK
        string message
        bool read
        date createdAt
    }
